fix (home): Prevent item vs. children click overlap

--- a/src/app/shared/home-item/home-item.component.scss
+++ b/src/app/shared/home-item/home-item.component.scss
@@ -5,10 +5,10 @@
   align-items: center;
   background-color: $gray-300-color;
   border-left: 3px solid $success-color;
-  padding: $spacing*6 $spacing*4;
-  padding-right: $spacing*8;
+  padding: $spacing*6 $spacing*30 $spacing*6 $spacing*14;
   border-radius: $radius-sm;
   justify-content: space-between;
+  position: relative;
 }
 
 .item-main {
@@ -18,6 +18,8 @@
 }
 
 .item-check {
+  position: absolute;
+  left: $spacing*4;
   width: 30px;
   height: 30px;
   flex-shrink: 0;
@@ -80,6 +82,8 @@
 }
 
 .delete-button {
+  position: absolute;
+  right: $spacing*8;
   color: $gray-800-color;
   border: none;
   padding: $spacing*2;
